visibility:hidden to prevent showing empty content

--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -60,3 +60,7 @@ canvas{
     
     color: red;
 }
+
+#hide {
+    visibility: hidden;
+}
